Add support for dns_etchosts

--- a/roles/kubernetes-apps/ansible/templates/coredns-config.yml.j2
+++ b/roles/kubernetes-apps/ansible/templates/coredns-config.yml.j2
@@ -17,6 +17,9 @@ data:
         loadbalance
         cache {{ block['cache'] | default(5) }}
         reload
+{% if dns_etchosts | default(None) %}
+        hosts /etc/coredns/hosts
+{% endif %}
     }
 {%   endfor %}
 {% endif %}
@@ -50,4 +53,11 @@ data:
         loop
         reload
         loadbalance
+{% if dns_etchosts | default(None) %}
+        hosts /etc/coredns/hosts
+{% endif %}
     }
+{% if dns_etchosts | default(None) %}
+  hosts: |
+   {{ dns_etchosts }}
+{% endif %}
