--- a/roles/kubernetes-apps/ansible/templates/nodelocaldns-config.yml.j2
+++ b/roles/kubernetes-apps/ansible/templates/nodelocaldns-config.yml.j2
@@ -19,6 +19,9 @@ data:
         forward . {{ block['nameservers'] | join(' ') }}
         prometheus :9253
         log
+{% if dns_etchosts | default(None) %}
+        hosts /etc/coredns/hosts
+{% endif %}
     }
 {% endfor %}
 {% endif %}
@@ -68,3 +71,7 @@ data:
         forward . {{ upstreamForwardTarget }}
         prometheus :9253
     }
+{% if dns_etchosts | default(None) %}
+  hosts: |
+   {{ dns_etchosts }}
+{% endif %}
