missing fallthrough and some custom blocks

--- a/roles/kubernetes-apps/ansible/templates/coredns-config.yml.j2
+++ b/roles/kubernetes-apps/ansible/templates/coredns-config.yml.j2
@@ -18,7 +18,9 @@ data:
         cache {{ block['cache'] | default(5) }}
         reload
 {% if dns_etchosts | default(None) %}
-        hosts /etc/coredns/hosts
+        hosts /etc/coredns/hosts {
+          fallthrough
+        }
 {% endif %}
     }
 {%   endfor %}
@@ -54,7 +56,9 @@ data:
         reload
         loadbalance
 {% if dns_etchosts | default(None) %}
-        hosts /etc/coredns/hosts
+        hosts /etc/coredns/hosts {
+          fallthrough
+        }
 {% endif %}
     }
 {% if dns_etchosts | default(None) %}
