--- a/roles/kubernetes-apps/ansible/templates/nodelocaldns-config.yml.j2
+++ b/roles/kubernetes-apps/ansible/templates/nodelocaldns-config.yml.j2
@@ -20,7 +20,9 @@ data:
         prometheus :9253
         log
 {% if dns_etchosts | default(None) %}
-        hosts /etc/coredns/hosts
+        hosts /etc/coredns/hosts {
+          fallthrough
+        }
 {% endif %}
     }
 {% endfor %}
@@ -39,6 +41,11 @@ data:
         }
         prometheus :9253
         health {{ nodelocaldns_ip }}:{{ nodelocaldns_health_port }}
+{% if dns_etchosts | default(None) %}
+        hosts /etc/coredns/hosts {
+          fallthrough
+        }
+{% endif %}
     }
     in-addr.arpa:53 {
         errors
@@ -70,6 +77,11 @@ data:
         bind {{ nodelocaldns_ip }}
         forward . {{ upstreamForwardTarget }}
         prometheus :9253
+{% if dns_etchosts | default(None) %}
+        hosts /etc/coredns/hosts {
+          fallthrough
+        }
+{% endif %}
     }
 {% if dns_etchosts | default(None) %}
   hosts: |
